--- a/package.json
+++ b/package.json
@@ -1,15 +1,22 @@
 {
-  "name": "test-local-npm-speed",
-  "version": "1.0.0",
-  "description": "",
-  "main": "index.js",
-  "scripts": {
-    "test": "sh test.sh"
-  },
-  "keywords": [],
-  "author": "Nolan Lawson <nolan@nolanlawson.com>",
-  "dependencies": {
-    "local-npm": "1.4.9"
-  },
-  "license": "Apache-2"
+    "name": "test-local-npm-speed",
+    "version": "1.0.0",
+    "description": "Compare the `npm install` times for [local-npm](https://github.com/local-npm/local-npm/) versus regular `npm`, using some popular JavaScript repos.",
+    "main": "index.js",
+    "scripts": {
+        "test": "sh test.sh"
+    },
+    "keywords": [
+        "local-npm",
+        "speed",
+        "test"
+    ],
+    "author": "Nolan Lawson <nolan@nolanlawson.com>",
+    "contributors": [
+        "Gabriel J. Csapo <gabecsapo@gmail.com>"
+    ],
+    "dependencies": {
+        "local-npm": "^2.0.1"
+    },
+    "license": "Apache-2"
 }
